@@ -7,6 +7,8 @@ update-manager (1:0.156.7) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeController.py, DistUpgrade/mirrors.cfg:
     - support upgrades with commercial-ppas in the sources.list
       (LP: #939461) and add tests
+  * UpdateManager/UpdateManager.py:
+    - fix inaccurate string, thanks to JohnNapster (LP: #942590)
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Feb 2012 20:16:32 +0100
 
